# dep_grapher

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  ts-to-zod.config.cjs  vite.config.ts
.github/workflows/: ci.yaml
src/: bindings.ts  bindings.zod.ts  index.css  main.tsx  routeTree.gen.ts  schemas.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  registrys.rs
src-tauri/src/get_projects/: deno.rs  mod.rs  nodejs.rs  python.rs  rust.rs  zig.rs
src-tauri/src/package/: mod.rs
src-tauri/src/package/package_location/: mod.rs
src-tauri/src/package/package_location/git/: mod.rs
src-tauri/src/package/package_location/local/: deno.rs  mod.rs  nodejs.rs  python.rs  rust.rs  zig.rs
src-tauri/src/package/package_location/registry/: mod.rs
src-tauri/src/registry/: mod.rs  resolve.rs  search.rs
src/components/: local_form.tsx  registry_form.tsx
src/routes/: __root.tsx  graph.tsx  index.tsx  remote.tsx
